refactor: Modernizar colecciones en servicios Java (Java 16+)
Reemplazar .collect(Collectors.toList()) con .toList()

Cambios en SalaService.java (4 métodos):
- getAllSalas()
- getSalasDisponibles()
- searchByNombre()
- findByCapacidadMinima()

Cambios en ArticuloService.java (4 métodos):
- getAllArticulos()
- getArticulosDisponibles()
- findByCategoria()
- searchByNombre()

Beneficios:
✅ Código más moderno y conciso
✅ Listas inmutables por defecto (más seguro)
✅ Mejor performance (menos overhead)
✅ Eliminar import innecesario de Collectors

Nota: Seguro porque estos métodos solo retornan listas
sin necesidad de modificarlas posteriormente.